--- a/d3force_example.html
+++ b/d3force_example.html
@@ -49,8 +49,8 @@ d3.json("graph.json", function(error, json) {
 });
 
 function update() {
-  var nodes = flatten(root),
-      links = d3.layout.tree().links(nodes);
+  var nodes = root.nodes,
+      links = root.links;
 
   // Restart the force layout.
   force
